force-app/main/default/objects/MessagingEndUser/MessagingEndUser.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>