force-app/main/default/objects/MessagingEndUser/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Date of last Message session creation attached to the Messaging User</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>