force-app/main/default/objects/MessagingEndUser/fields/Tech_GroupID__c.field-meta.xml
<CustomField>
    <fullName>Tech_GroupID__c</fullName>
    <label>Tech_GroupID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>