force-app/main/default/objects/MessagingEndUser/listViews/Test_SFDC_queue_Bahrain_MessagingEndUser.listView-meta.xml
<ListView>
    <fullName>Test_SFDC_queue_Bahrain_MessagingEndUser</fullName>
    <filterScope>Queue</filterScope>
    <label>Test SFDC queue Bahrain</label>
    <queue>Test_SFDC_queue_Bahrain</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>